--- a/test_pinn_basic.ipynb
+++ b/test_pinn_basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,16 +10,17 @@
     "from PINN import PINN\n",
     "from Net import Net\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"D:/andyh/Documents/Projects/mines/methane_project/dev_jia/pinn_dev/data/ADED2022/pinn_test_data\"\n",
+    "data_dir = f\"{os.getcwd()}/pinn_test_data\"\n",
     "# load in data\n",
     "df_wind_ch4 = pd.read_csv(data_dir + \"/wind_ch4.csv\")\n",
     "df_true_emission = pd.read_csv(data_dir + \"/selected_controll_release.csv\")\n",
@@ -896,7 +897,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
