needed to change a path for user-friendliness

--- a/test_pinn.ipynb
+++ b/test_pinn.ipynb
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import time"
+    "import time\n",
+    "import os"
    ]
   },
   {
@@ -21,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = \"D:/andyh/Documents/Projects/mines/methane_project/dev_jia/pinn_dev/data/ADED2022/pinn_test_data\"\n",
+    "data_dir = f\"{os.getcwd()}/pinn_test_data\"\n",
     "# load in data\n",
     "df_wind_ch4 = pd.read_csv(data_dir + \"/wind_ch4.csv\")\n",
     "df_true_emission = pd.read_csv(data_dir + \"/selected_controll_release.csv\")\n",
