--- a/test_pinn.ipynb
+++ b/test_pinn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,16 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import time\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "# set default type double\n",
+    "default_type = torch.float64\n",
+    "torch.set_default_dtype(default_type)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,46 +50,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[61.84826691 40.32822479  4.5       ]\n",
-      " [99.10094831 54.69940709  2.        ]\n",
-      " [99.89962676 24.72759871  2.        ]\n",
-      " [23.54499552 57.03946784  2.        ]\n",
-      " [25.09781584 22.62636785  2.        ]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(source_points)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = PINN([200,200,200,200])\n",
+    "model = PINN([300,300,300])\n",
     "model.set_location(source_points,[1,x_max,y_max,z_max],source_values=[0,10,0,0,0],sigma = .1)\n",
     "tfinal = 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "optimizer = torch.optim.Adam(model.net.parameters(), lr=4e-3)\n",
-    "from torch.optim.lr_scheduler import ExponentialLR\n",
+    "optimizer = torch.optim.Adam(model.net.parameters(), lr=1e-3)\n",
+    "# from torch.optim.lr_scheduler import ExponentialLR\n",
     "\n",
-    "scheduler = ExponentialLR(optimizer, gamma=0.995)  # Decay LR by 5% every epoch"
+    "# scheduler = ExponentialLR(optimizer, gamma=0.995)  # Decay LR by 5% every epoch"
    ]
   },
   {
@@ -97,74 +89,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "epoch: 0, loss: 1.220e+02, grad_norm: 3.196e+02, pde_res: 1.220e+02, time: 8.695e-01\n",
-      "epoch: 100, loss: 4.170e+01, grad_norm: 2.031e+02, pde_res: 4.170e+01, time: 2.631e-02\n",
-      "epoch: 200, loss: 6.042e+01, grad_norm: 1.018e+02, pde_res: 6.042e+01, time: 2.528e-02\n",
-      "epoch: 300, loss: 3.416e+01, grad_norm: 2.032e+02, pde_res: 3.416e+01, time: 2.573e-02\n",
-      "epoch: 400, loss: 3.148e+01, grad_norm: 8.010e+01, pde_res: 3.148e+01, time: 2.485e-02\n",
-      "epoch: 500, loss: 1.836e+01, grad_norm: 9.846e+01, pde_res: 1.836e+01, time: 2.313e-02\n",
-      "epoch: 600, loss: 5.146e+01, grad_norm: 6.621e+01, pde_res: 5.146e+01, time: 2.430e-02\n",
-      "epoch: 700, loss: 3.664e+01, grad_norm: 1.449e+02, pde_res: 3.664e+01, time: 2.484e-02\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m     uv \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;28mlen\u001b[39m(collocation_points),\u001b[38;5;241m2\u001b[39m)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m.5\u001b[39m\n\u001b[0;32m     17\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m---> 19\u001b[0m loss_1 ,pde_1 \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloss_function\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcollocation_points\u001b[49m\u001b[43m,\u001b[49m\u001b[43muv\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# PDE residual loss\u001b[39;00m\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m# loss_2,pde_2 = model.loss_function(source_collocation_points, uv_points, source_term = source_values) # source term PDE residual loss \u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# loss_3 ,pde_3 = model.loss_function(torch.concat([collocation_points,source_collocation_points]),torch.concat([collocation_points,source_collocation_points]))\u001b[39;00m\n\u001b[0;32m     23\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_1 \n",
-      "File \u001b[1;32md:\\andyh\\Documents\\Projects\\mines\\methane_project\\methane_pinn_dev\\PINN.py:121\u001b[0m, in \u001b[0;36mPINN.loss_function\u001b[1;34m(self, tx, uv, source_term, scaled)\u001b[0m\n\u001b[0;32m    117\u001b[0m \u001b[38;5;66;03m# assert u_t.shape == (batch_size, 1)\u001b[39;00m\n\u001b[0;32m    119\u001b[0m source_term \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor(np\u001b[38;5;241m.\u001b[39mexp(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msource_mixture\u001b[38;5;241m.\u001b[39mscore_samples(tx[:,\u001b[38;5;241m1\u001b[39m:]\u001b[38;5;241m.\u001b[39mdetach()\u001b[38;5;241m.\u001b[39mcpu()\u001b[38;5;241m.\u001b[39mnumpy())))\n\u001b[1;32m--> 121\u001b[0m negative_loss \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmean(\u001b[43m(\u001b[49m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mabs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mu\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m)\n\u001b[0;32m    122\u001b[0m \u001b[38;5;66;03m# compute loss\u001b[39;00m\n\u001b[0;32m    124\u001b[0m pde_loss \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mmean((u_x[:,\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m+\u001b[39m velocity_term \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m0.1\u001b[39m \u001b[38;5;241m*\u001b[39m laplace_term \u001b[38;5;241m-\u001b[39m (source_term) )\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m2\u001b[39m) \n",
-      "File \u001b[1;32mc:\\Users\\andyh\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\torch\\_tensor.py:34\u001b[0m, in \u001b[0;36m_handle_torch_function_and_wrap_type_error_to_not_implemented.<locals>.wrapped\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_handle_torch_function_and_wrap_type_error_to_not_implemented\u001b[39m(f):\n\u001b[0;32m     32\u001b[0m     assigned \u001b[38;5;241m=\u001b[39m functools\u001b[38;5;241m.\u001b[39mWRAPPER_ASSIGNMENTS\n\u001b[1;32m---> 34\u001b[0m     \u001b[38;5;129m@functools\u001b[39m\u001b[38;5;241m.\u001b[39mwraps(f, assigned\u001b[38;5;241m=\u001b[39massigned)\n\u001b[0;32m     35\u001b[0m     \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapped\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[0;32m     36\u001b[0m         \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     37\u001b[0m             \u001b[38;5;66;03m# See https://github.com/pytorch/pytorch/issues/75462\u001b[39;00m\n\u001b[0;32m     38\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m has_torch_function(args):\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n=5000\n",
+    "n= int(1e2)\n",
     "sn = 3000\n",
     "best_loss = np.inf\n",
-    "print_freq = 100\n",
-    "for epoch in range(5000):\n",
-    "    start_time = time.time()\n",
-    "    if epoch % 20 == 0:\n",
-    "        source_collocation_points = model.source_points(2000,.1)\n",
-    "        ic_col = torch.cat([torch.rand(sn,1)*tfinal*.1, torch.rand(sn,1)*x_max*1.5, torch.rand(sn,1)*y_max*1.5, torch.rand(sn,1)*z_max*1.5], dim=1)\n",
+    "print_freq = 1\n",
+    "max_epochs = int(5e3)\n",
+    "sample_freq = 10\n",
+    "n_source_samples = int(1e3)\n",
     "\n",
-    "        collocation_points = torch.cat([torch.rand(n,1)*tfinal*1.5, torch.rand(n,1)*x_max*1.5, torch.rand(n,1)*y_max*1.5, torch.rand(n,1)*z_max*1.5], dim=1)\n",
+    "standard_dev = 1e-1\n",
+    "\n",
+    "for epoch in range(max_epochs):\n",
+    "    start_time = time.time()\n",
+    "    if epoch % sample_freq == 0:\n",
+    "        source_collocation_points = model.source_points(n_source_samples,standard_dev)\n",
+    "        ic_col = torch.cat([torch.rand(sn,1)*tfinal*.1, torch.rand(sn,1)*x_max, torch.rand(sn,1)*y_max, torch.rand(sn,1)*z_max], dim=1)\n",
+    "\n",
+    "        collocation_points = torch.cat([torch.rand(n,1)*tfinal, torch.rand(n,1)*x_max, torch.rand(n,1)*y_max, torch.rand(n,1)*z_max], dim=1)\n",
     "        collocation_points = torch.empty(0,4)\n",
     "        # ic_col = torch.empty(0,4)\n",
     "        ic_col.requires_grad_()\n",
     "        collocation_points = torch.cat([collocation_points,ic_col,source_collocation_points])\n",
-    "        uv = torch.ones(len(collocation_points),2)*.5\n",
+    "        wind_vector = torch.ones(len(collocation_points),2)*10.0\n",
     "    optimizer.zero_grad()\n",
     "\n",
-    "    loss_1 ,pde_1 = model.loss_function(collocation_points,uv) # PDE residual loss\n",
+    "    loss_1 ,pde_1 = model.loss_function(collocation_points,wind_vector) # PDE residual loss\n",
     "    # loss_2,pde_2 = model.loss_function(source_collocation_points, uv_points, source_term = source_values) # source term PDE residual loss \n",
     "    # loss_3 ,pde_3 = model.loss_function(torch.concat([collocation_points,source_collocation_points]),torch.concat([collocation_points,source_collocation_points]))\n",
     "\n",
     "    loss = loss_1 \n",
-    "    # loss = loss_2*100\n",
-    "    # loss = loss_1\n",
-    "\n",
-    "    # # print loss at first epoch\n",
-    "    # if epoch == 0:\n",
-    "    #     print('epoch: %d, loss: %1.3e, pde_res: %1.3e, source_loss: %1.3e' % (epoch, loss.item(), loss_1.item(), loss_2.item()))\n",
-    "\n",
+    "    \n",
     "    loss.backward()\n",
     "\n",
     "    # compute norm of gradient of the network\n",
     "    grad_norm = 0\n",
     "    for p in model.net.parameters():\n",
-    "        grad_norm += p.grad.data.norm(2).item()**2\n",
+    "        # if p.grad.data is not None:\n",
+    "        if p.grad is not None:\n",
+    "            grad_norm += p.grad.data.norm().item()**2\n",
     "    grad_norm = grad_norm**0.5\n",
     "\n",
     "\n",
@@ -185,55 +151,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0.6738, 98.9835, 54.8135,  2.0938],\n",
-       "        [ 0.2572, 99.0988, 54.7350,  2.0975],\n",
-       "        [ 0.5798, 99.0592, 54.9738,  1.9071],\n",
-       "        ...,\n",
-       "        [ 0.1691, 99.2060, 54.6626,  1.9112],\n",
-       "        [ 0.7276, 99.0460, 54.7771,  2.0300],\n",
-       "        [ 0.1757, 99.0297, 54.8280,  1.9655]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "source_collocation_points"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = torch.load('best_mod.pth')"
+    "model = torch.load('best_mod.pth')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\n# Plot the concentration over time\\nfor t in time_steps:\\n    t_tensor = torch.full((grid_points.shape[0], 1), t, dtype=torch.float32)  # Time input\\n    concentration = net(grid_points, t_tensor).cpu().detach().numpy().reshape(100, 100)  # Predict and reshape\\n    \\n    plt.figure()\\n    plt.contourf(X, Y, concentration, levels=50, cmap=\\'viridis\\', vmin=0, vmax=10)  # Plot concentration as a contour plot\\n    plt.plot(source_loc[0,0].cpu(), source_loc[0,1].cpu(), \\'ro\\', label=\\'Source Location\\')  # Plot the source location\\n    plt.colorbar(label=\\'Concentration\\')\\n    # fix colorbar from 0 to 1 \\n    # plt.clim(0, 10.0)  # Set colorbar limits\\n    plt.title(f\"Gas Concentration at t = {t:.2f}\")\\n    plt.xlabel(\\'x\\')\\n    plt.ylabel(\\'y\\')\\n    # fix colorbar \\n    # plt.savefig(f\"concentration_t_{t:.2f}.png\")  # Save the plot as an image\\n'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -242,9 +180,9 @@
     "# net.load_state_dict(torch.load('best_model.pth'))\n",
     "\n",
     "# Define the grid and time steps\n",
-    "n= 100\n",
-    "x_grid = np.linspace(0, x_max, n)\n",
-    "y_grid = np.linspace(0, y_max, n)\n",
+    "n= 500\n",
+    "x_grid = np.linspace(0, 2.0*x_max, n)\n",
+    "y_grid = np.linspace(0, 2.0*y_max, n)\n",
     "z_grid = np.linspace(0, 2, n)\n",
     "\n",
     "X, Y, = np.meshgrid(x_grid, y_grid)\n",
@@ -254,7 +192,7 @@
     "# grid_points = np.vstack([X.ravel(), Y.ravel(), Z.ravel()]).T  # Flatten the grid\n",
     "grid_points = torch.tensor(grid_points, dtype=torch.float32)\n",
     "\n",
-    "time_steps = np.linspace(0, tfinal, 20)  # 10 time steps from 0 to 1\n",
+    "time_steps = np.linspace(0, tfinal, 50)  # 10 time steps from 0 to 1\n",
     "\n",
     "\n",
     "'''\n",
@@ -279,18 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\andyh\\AppData\\Local\\Temp\\ipykernel_24840\\1417289318.py:23: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning disappear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
-      "  images.append(imageio.imread(f\"concentration_t_{t:.2f}.png\"))  # Append the image to the list\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save as a GIF\n",
     "import imageio\n",
@@ -299,11 +228,11 @@
     "images = []\n",
     "# source_loc = torch.tensor([[.5,.5,.5]])\n",
     "for t in time_steps:\n",
-    "    t_tensor = torch.full((grid_points.shape[0], 1), t, dtype=torch.float32)  # Time input\n",
-    "    concentration = model.forward(torch.cat([t_tensor,grid_points],dim=1),scaled=False).cpu().detach().numpy().reshape(100, 100)  # Predict and reshape\n",
+    "    t_tensor = torch.full((grid_points.shape[0], 1), t, dtype=default_type)  # Time input\n",
+    "    concentration = model.forward(torch.cat([t_tensor,grid_points],dim=1),scaled=False).cpu().detach().numpy().reshape(n, n)  # Predict and reshape\n",
     "    \n",
     "    plt.figure()\n",
-    "    plt.contourf(X, Y, concentration, levels=50, cmap='viridis', vmin=0, vmax=10)  # Plot concentration as a contour plot\n",
+    "    plt.contourf(X, Y, concentration, levels=50, cmap='viridis', vmin=0, vmax=50)  # Plot concentration as a contour plot\n",
     "    plt.plot(model.source_locs[1,0], model.source_locs[1,1], 'ro', label='Source Location')  # Plot the source location\n",
     "    plt.colorbar(label='Concentration')\n",
     "    # plt.title(f\"Gas Concentration at t = {t:.2f}\")\n",
@@ -323,20 +252,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 0.0000, 20.0785,  0.0000,  0.0000,  0.0000], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.source_mixture\n",
     "source_term = torch.tensor(np.exp(model.source_mixture.score_samples(model.source_locs)))\n",
@@ -347,34 +265,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(len(model.net.hidden))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model.source_mixture.weights_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfinal"
    ]
   },
   {
@@ -387,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "pinn_methane_env",
    "language": "python",
    "name": "python3"
   },
@@ -401,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
